# shadowbound

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  TODO.md  docker-compose.yml
analyzer/: .gitignore  Makefile  fmt-json.py  run.sh
analyzer/src/: CMakeLists.txt
analyzer/src/harness/: CMakeLists.txt  funarg.cpp  main.cpp  pattern.cpp  pattern.h  relation.cpp  relation.h  struct.cpp
artifact/: README.md
artifact/chakra/: Dockerfile  keep-going.diff  test.sh
artifact/nginx/: Dockerfile  eval.sh  test.sh
artifact/spec2017/: Dockerfile  build.sh
config/: 400.perlbench.json  403.gcc.json  429.mcf.json  433.milc.json  444.namd.json  445.gobmk.json  447.dealII.json  450.soplex.json  453.povray.json  456.hmmer.json  458.sjeng.json  462.libquantum.json  464.h264ref.json  470.lbm.json  473.astar.json  482.sphinx3.json  483.xalancbmk.json  500.perlbench_r.json  502.gcc_r.json  505.mcf_r.json  508.namd_r.json  510.parest_r.json  511.povray_r.json  519.lbm_r.json  520.omnetpp_r.json  523.xalancbmk_r.json  525.x264_r.json  526.blender_r.json  531.deepsjeng_r.json  538.imagick_r.json  541.leela_r.json  544.nab_r.json  557.xz_r.json  chakra.json  nginx.json
doc/: PatternOpt.md  README.md
eval/: README.md
eval/nginx/: Dockerfile
ffmalloc/: Makefile  ffmalloc.c  ffmalloc.h
markus/: README.md  license.txt  setup.sh
markus/bdwgc-markus/: CMakeLists.txt  Makefile.am  Makefile.direct  allchblk.c  alloc.c  mark.c  (+11 more)
test/: end-of-array.cpp  in-field.c  pattern.cpp  pgo.c  test-alloc.c  test.c
tools/: analysis.py  callgrind.py  runspec.py  statistic.py
(+67 files in other folders)
